# plato-notebooks

./: .gitignore  README.md  generate_notebook.py  inspect.ipynb  main.py  parse_texts.ipynb  parsers.py  playground.ipynb  pyproject.toml  requirements.txt  reuirements.txt  utils.py
Apology/: Apology.ipynb
Apology-example/: Apology.ipynb  example-Apology.ipynb
side_by_side_template/: conf.json  index.html.j2
templates/: index.html.j2
texts/: Apology.txt  Crito.txt  Euthyphro.txt  Phaedo.txt
