[project]
name = "plato-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click==8.1.0",
    "dill>=0.4.0",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "openai>=1.78.0",
    "typer>=0.15.3",
]
